# libpandabsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  interrogate.bat
bsptest/: CMakeLists.txt
bsptest/src/: main.cpp
libdirectgui/: CMakeLists.txt
libdirectgui/include/: config_directgui.h  directgui_widget.h
libdirectgui/src/: config_directgui.cpp  directgui_widget.cpp
libpandabsp/: CMakeLists.txt  interrogate.bat  materialsystem.txt  shadersystem.txt
libpandabsp/dxgsg11/: dxGraphicsDevice11.h  wdxGraphicsBuffer11.h  wdxGraphicsPipe11.h  wdxGraphicsWindow11.h
libpandabsp/include/: TexturePacker.h  ambient_probes.h  bounding_kdop.h  bsp_material.h  bsp_render.h  bsp_trace.h  bspfile.h  bsploader.h  config_bsp.h  cubemaps.h  decals.h  entity.h  glow_node.h  lightmap_palettes.h  pssmCameraRig.h  raytrace.h  shader_csmrender.h  shader_decalmodulate.h  shader_features.h  shader_generator.h  shader_lightmappedgeneric.h  shader_skybox.h  shader_spec.h  shader_unlitgeneric.h  shader_unlitnomat.h  shader_vertexlitgeneric.h
libpandabsp/src/: TexturePacker.cpp  ambient_boost_effect.cpp  ambient_probes.cpp  bounding_kdop.cpp  bsp.in  bsp_igate.cpp  bsp_material.cpp  bsp_module.cpp  bsp_render.cpp  bsp_trace.cpp  bspfile.cpp  bsploader.cpp  ciolib.cpp  config_bsp.cpp  decals.cpp  entity.cpp  glow_node.cpp  lightmap_palettes.cpp  pssmCameraRig.cpp  raytrace.cpp  shader_csmrender.cpp  shader_decalmodulate.cpp  shader_features.cpp  shader_generator.cpp  shader_lightmappedgeneric.cpp  shader_skybox.cpp  shader_spec.cpp  shader_unlitgeneric.cpp  shader_unlitnomat.cpp  shader_vertexlitgeneric.cpp
libppcore/: CMakeLists.txt  README.md
libppcore/include/: actor.h  audio3dmanager.h  commonfilters.h  config_pandaplus.h  controlmanager.h  controlsystembase.h  devshotcamera.h  door.h  filtermanager.h  fsm.h  global_particlemanager.h  global_physicsmanager.h  gravitywalker.h  inputstate.h  map.h  mapinfo.h  maploader.h  pp_globals.h  pp_utils.h  ppbase.h  shadowplacer.h  sun.h  textureanimation.h  walker.h  walker_gravity.h  walker_physics.h
libppcore/renderpipeline/: config_rsnative.cpp  config_rsnative.h  gpucommand.cpp  gpucommand.h  gpucommandlist.cpp  gpucommandlist.h  gpucommandqueue.cpp  gpucommandqueue.h  iesdataset.cpp  iesdataset.h  image.h  internallightmanager.cpp  internallightmanager.h  lightmanager.cpp  lightmanager.h  pointerslotstorage.h  postprocessregion.cpp  postprocessregion.h  pssmcamerarig.cpp  pssmcamerarig.h  pssmhelper.cpp  pssmhelper.h  renderpipeline.cpp  renderpipeline.h  rendertarget.cpp  rendertarget.h  rplight.cpp  rplight.h  rppointlight.cpp  rppointlight.h  rpspotlight.cpp  rpspotlight.h  shadowatlas.cpp  shadowatlas.h  shadowmanager.cpp  shadowmanager.h  shadowsource.cpp  shadowsource.h  simpleinputblock.cpp  simpleinputblock.h  (+2 more)
libppcore/src/: actor.cpp  audio3dmanager.cpp  commonfilters.cpp  config_pandaplus.cpp  controlmanager.cpp  controlsystembase.cpp  devshotcamera.cpp  door.cpp  filtermanager.cpp  fsm.cpp  global_particlemanager.cpp  global_physicsmanager.cpp  gravitywalker.cpp  inputstate.cpp  map.cpp  mapinfo.cpp  maploader.cpp  pp_globals.cpp  pp_utils.cpp  ppbase.cpp  shadowplacer.cpp  sun.cpp  textureanimation.cpp  walker.cpp  walker_gravity.cpp  walker_physics.cpp
libppdistributed/: CMakeLists.txt
libppdistributed/astronimpl/: aiRepositoryBase.cpp  airepositorybase.h  astronClientRepository.cpp  astronDatabaseInterface.cpp  astronInternalRepository.cpp  astronclientrepository.h  astrondatabaseinterface.h  astroninternalrepository.h  distributedObjectGlobal.cpp  distributedObjectGlobalAI.cpp  distributedObjectGlobalUD.cpp  distributedObjectUD.cpp  distributedRoot.cpp  distributedRootAI.cpp  distributedRootUD.cpp  distributedobjectglobal.h  distributedobjectglobalai.h  distributedobjectglobalud.h  distributedobjectud.h  distributedroot.h  distributedrootai.h  distributedrootud.h
libppdistributed/include/: clientrepository.h  clientrepositorybase.h  clockdelta.h  config_ppdistributed.h  connectionrepository.h  datagram_extensions.h  dcclass_pp.h  dcfield_pp.h  distributednode.h  distributednode_ai.h  distributedobject.h  distributedobject_ai.h  distributedobject_base.h  distributedsmoothnode.h  distributedsmoothnode_ai.h  distributedsmoothnode_base.h  do_collectionmanager.h  do_hierarchy.h  do_interestmanager.h  parentmgr.h  pp_dcbase.h  relatedobjectmgr.h  server_repository.h  timemanager.h  timemanager_ai.h
libppdistributed/src/: clientrepository.cpp  clientrepositorybase.cpp  clockdelta.cpp  config_ppdistributed.cpp  connectionrepository.cpp  datagram_extensions.cpp  dcclass_pp.cpp  dcfield_pp.cpp  distributednode.cpp  distributednode_ai.cpp  distributedobject.cpp  distributedobject_ai.cpp  distributedobject_base.cpp  distributedsmoothnode.cpp  distributedsmoothnode_ai.cpp  distributedsmoothnode_base.cpp  do_collectionmanager.cpp  do_hierarchy.cpp  do_interestmanager.cpp  parentmgr.cpp  pp_dcbase.cpp  server_repository.cpp  timemanager.cpp  timemanager_ai.cpp
libppgui/: CMakeLists.txt
libppgui/include/: config_ppgui.h  ppgui.h  ppguibutton.h  ppguientry.h  ppguiimage.h  ppguilabel.h  ppguischeme.h  ppguiscrollframe.h
libppgui/src/: config_ppgui.cpp  ppgui.cpp  ppguibutton.cpp  ppguientry.cpp  ppguiimage.cpp  ppguilabel.cpp  ppguischeme.cpp  ppguiscrollframe.cpp
lightmap/: CMakeLists.txt
lightmap/src/: main.cpp
src/: CMakeLists.txt  ambient_probes.cpp  audio_3d_manager.cpp  aux_data_attrib.cpp  bsp.in  bsp_igate.cpp  bsp_material.cpp  bsp_module.cpp  bsp_render.cpp  bsp_trace.cpp  bsploader.cpp  config_bsp.cpp  decals.cpp  entity.cpp  lightmap_palettes.cpp  physics_character_controller.cpp  planar_reflections.cpp  shader_csmrender.cpp  shader_decalmodulate.cpp  shader_features.cpp  shader_generator.cpp  shader_lightmappedgeneric.cpp  shader_skybox.cpp  shader_spec.cpp  shader_unlitgeneric.cpp  shader_unlitnomat.cpp  shader_vertexlitgeneric.cpp  texture_filter.cpp
src/bphysics/: CMakeLists.txt  config_bphysics.cpp  config_bphysics.h  phys_box.cpp  phys_box.h  phys_capsule.cpp  (+17 more)
vifparser/: CMakeLists.txt
(+577 files in other folders)
